styles.css
* {
    box-sizing: border-box;
}
body {
    margin: 0;
    padding: 0;
    min-width: 1500px; 
}
.container {
    display: flex;
    width: 1500px;      
    height: 100vh;
  }
img {
    height: 100%;
    width: 100%; 
    display: block;
}
.image-container {
    width: 535px; 
    position: relative;
    flex-shrink: 0;
}
.text-overlay {
    position: absolute;
    color: white;
    background-color: rgba(0, 0, 0, 0.5);
    font-size: 40px;
    padding: 30px;
    top: 20%;
    left: 0;
    width: 100%; 
    text-align: center;
}
.text-content {
    flex-shrink: 0;
    width: 1050px;
    display: flex;
}
h1 {
    font-family: sans-serif;
    font-size: 20px;
    padding-top: 100px;
    padding-left: 50px;
    padding-right: 300px;
    margin: 0;
    background-color: #F5F5F5;  
    height: 36vh;               
    box-sizing: border-box;  
    font-size: 25px;
    font-weight: 400;
}
h2 {
    padding-left: 50px;
    font-weight: 400;
}
.form-container {
    font-family: sans-serif;
}
.form {
    display: flex;
    flex-direction: column;
    gap: 20px;
    padding-left: 50px;
}
.input-pair label {
    display: block;
    margin-bottom: 5px;
    font-size: 12px;
  }
  
  .input-pair input {
    width: 300px;
    padding: 8px;
    font-size: 14px;
    box-sizing: border-box;
    border-radius: 5px;
    border: 1px solid #E5E7EB;
  }
.name {
    display: flex;
    gap: 70px;
}
.contacts {
    display: flex;
    gap: 70px;
}
.password {
    display: flex;
    gap: 70px;
}

